--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -166,7 +166,7 @@
     
     >h1{
         text-align: center;
-        font: 900;
+        font: 900 3rem 'Mooli';
         margin: 3rem;
     }
     >div{
@@ -287,7 +287,7 @@
            }
 
            >button{
-            width: 20%;
+          
             height: 2rem;
             padding: 5px;
             margin: 1rem;
