--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -265,6 +265,7 @@
 
         >form{
            width: 70vw;
+           display: block;
             
            >div{
             padding: 0.5rem;
