--- a/src/styles/device.scss
+++ b/src/styles/device.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 950px) {
   .home {
     div {
       button {
@@ -8,7 +8,7 @@
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   nav {
     h1 {
       display: none;
@@ -17,11 +17,11 @@
     div {
       width: 100%;
       // border: 2px solid black;
-      display: flex ;
+      display: flex;
       justify-content: center;
-     >a:first-child{
-      display: none;
-     }
+      > a:first-child {
+        display: none;
+      }
     }
   }
   .home {
@@ -35,7 +35,9 @@
   }
 
   .home2 {
-   margin-bottom: 5rem;
+    display: block;
+
+    height: fit-content;
   }
 
   .home2 > div > .college {
@@ -47,60 +49,56 @@
     box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.5);
     margin: 1rem;
     padding: 10px;
-  
-}
-  
-   
-   
-    
+  }
 
-    .home2>div>.school{
-      background-color: white;
+  .home2 > div > .school {
+    background-color: white;
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.5);
+    margin: 1rem;
+    padding: 10px;
+  }
+  .home3 {
+    display: block;
+
+    height: fit-content;
+    > div {
+      background-color: #dcd2d2;
+      box-shadow: none;
       width: 100%;
       height: fit-content;
-      display: flex;
-      flex-direction: column;
-      box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.5);
-      margin: 1rem;
-      padding: 10px;
-      
+      margin: 1rem 0;
+      border: 2px solid black;
     }
-      .home3{
-        width: 100%;
-        height: fit-content;
-        margin-top: 2rem;
-      
-    
-       > div{
-        background-color: #dcd2d2;
-        box-shadow: none;
-        width: 100%;
-        height: fit-content;
-        margin: 1rem 0;
-        border: 2px solid black;
-       }
-      }
-    
-      .home4{
-        width: 100%;
-        // height: fit-content;
-        
-        >div{
-          width: 100%;
-          height: fit-content;
-          margin: 1rem 0;
-          display: block;
-        }
-        }
-        .home5{
-          width: 100%;
-          height: fit-content;
-       
-        }
-        
-     
+  }
 
-  }  
+  .home4 {
+    width: 100%;
+    height: fit-content;
+    // border: 2px solid black;
+    display: block;
 
-  
-    
+    > div {
+      width: 100%;
+      height: fit-content;
+      margin: 1rem 0;
+      display: block;
+    }
+  }
+  .home5 {
+    width: 100%;
+    height: fit-content;
+
+    display: block;
+
+   
+  }
+
+  footer{
+    // display: block;
+    height: fit-content;
+  }
+}
